added navbar & main.js added eslint

--- a/index.html
+++ b/index.html
@@ -6,10 +6,13 @@
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
-    <nav>
-      <span>Top</span>
-      <span>Grid</span>
-      <span>Box Model</span>
+    <nav class="navbar">
+      <button id="navToTags">HTML Tags</button>
+      <button id="navToSEO">SEO</button>
+      <button id="navToGrid">Grid</button>
+      <button id="navToBox">Box Model</button>
+      <button id="navToFont">Font</button>
+      <button id="navToPos">Position</button>
     </nav>
     <header>
       <h1>HTML + CSS + JavaScript self assessment by Xinyuan Huang</h1>
@@ -92,33 +95,32 @@
         <span class="boxElement" id="paddingC">padding 10px</span>
       </div>
     </section>
-   <section class="fontSize">
-     <header>
-       <h2>Font size demo</h2>
-     </header>
-     <ol>
-       <li id="f1">Hello</li>
-       <li id="f2">Hello</li>
-       <li id="f3">Hello</li>
-       <li id="f4">Hello</li>
-       <li id="f5">Hello</li>
-       <li id="f6">Hello</li>
-     </ol>
-   </section>
-  <section class="position">
-    <header>
-      <h2>Position demo</h2>
-      <div class="positionBox" id="p1"> relative left 50px</div>
-      <br>
-      <div class="positionBox" id="p2">absolute z index=1</div>
-      <br>
-      <div class="positionBox" id="p3">absolute z index=2</div>
-      <br>
-      <div class="positionBox" id="p4">fixed to the right</div>
-    </header>
-  </section>
-  <footer>
-    by Xinyuan Huang | huangxny@gmail.com
-  </footer>
+    <section class="fontSize">
+      <header>
+        <h2>Font size demo</h2>
+      </header>
+      <ol>
+        <li id="f1">Hello</li>
+        <li id="f2">Hello</li>
+        <li id="f3">Hello</li>
+        <li id="f4">Hello</li>
+        <li id="f5">Hello</li>
+        <li id="f6">Hello</li>
+      </ol>
+    </section>
+    <section class="position">
+      <header>
+        <h2>Position demo</h2>
+        <div class="positionBox" id="p1">relative left 50px</div>
+        <br />
+        <div class="positionBox" id="p2">absolute z index=1</div>
+        <br />
+        <div class="positionBox" id="p3">absolute z index=2</div>
+        <br />
+        <div class="positionBox" id="p4">fixed to the right</div>
+      </header>
+    </section>
+    <footer>by Xinyuan Huang | huangxny@gmail.com</footer>
   </body>
+  <script src="main.js"></script>
 </html>
